--- a/src/main/res/layout/include_login_method.xml
+++ b/src/main/res/layout/include_login_method.xml
@@ -23,7 +23,7 @@
 
     <com.facebook.widget.LoginButton
         xmlns:fb="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/login_button"
+        android:id="@+id/include_login_method_facebook"
         android:layout_width="220dp"
         android:layout_height="50dp"
         android:layout_gravity="center"
