--- a/src/main/res/layout/view_profile.xml
+++ b/src/main/res/layout/view_profile.xml
@@ -5,14 +5,38 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/view_profile_email"
+    <ImageView
+        android:id="@+id/view_profile_image"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="15dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true" />
+
+    <LinearLayout
         android:padding="15dp"
-        android:textSize="16sp"
-        android:textColor="@color/drawer_profile_text_color"
+        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true" />
+        android:layout_alignParentBottom="true">
+
+        <TextView
+            android:id="@+id/view_profile_name"
+            android:textSize="18sp"
+            android:textColor="@color/drawer_profile_text_color"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp" />
+
+        <TextView
+            android:id="@+id/view_profile_email"
+            android:textSize="16sp"
+            android:textColor="@color/drawer_profile_text_color"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
 
 </RelativeLayout>
