--- a/src/main/res/layout/fragment_main_moods.xml
+++ b/src/main/res/layout/fragment_main_moods.xml
@@ -45,7 +45,7 @@
         android:layout_marginTop="15dp"
         android:columnCount="3"
         android:rowCount="2"
-        tools:context="com.example.jrpotter.appetite.main.MoodsFragment">
+        tools:context="com.example.jrpotter.appetite.mood.MoodsFragment">
 
         <!-- First Row -->
         <LinearLayout
