--- a/src/main/res/menu/menu_main.xml
+++ b/src/main/res/menu/menu_main.xml
@@ -2,7 +2,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.jrpotter.appetite.MainActivity">
+    tools:context="com.example.jrpotter.appetite.main.MainActivity">
     <item
         android:id="@+id/action_bar_search"
         android:title="@string/action_search"
